# time.fun

./: package-lock.json  package.json
apps/backend/: BUY_SELL_GUIDE.md  TOKEN_CREATION_GUIDE.md  index.ts  package.json  test-buy-sell.ts  test-token-creation.ts  tsconfig.json
apps/backend/controller/: authController.ts  createToken.ts  creatorController.ts  tokenController.ts  userController.ts
apps/backend/controller/auth/: emailController.ts  otpController.ts
apps/backend/middleware/: authMiddleware.ts
apps/backend/routes/: authRoute.ts  routes.ts  tokenRoute.ts  userRoute.ts
apps/backend/services/: bondingCurve.ts  emailService.ts  otpService.ts  solana.ts  twitterService.ts
apps/backend/services/solana/: backendWallet.ts  createPool.ts  createToken.ts  solanaService.ts  tokenService.ts
apps/chat-ws/: README.md  index.ts  package.json
apps/chat-ws/services/: flushDB.ts
apps/chat-ws/types/: types.ts
apps/web/: SETUP.md  package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/components/: BondingCurve.tsx  BookingModal.tsx  CreateToken.tsx  CreatorsSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  LoginModal.tsx  Navbar.tsx  TokenPreview.tsx  TradingModal.tsx  TwitterLogin.tsx  WalletConnectButton.tsx  (+1 more)
apps/web/ui/: Card.tsx  TokenCard.tsx
apps/webRTC/: README.md  index.ts  package.json
contracts/bonding_curve/: Anchor.toml  Cargo.toml
contracts/bonding_curve/programs/bonding_curve/: Cargo.toml
contracts/bonding_curve/programs/bonding_curve/src/: lib.rs
(+20 files in other folders)
